@@ -359,6 +359,9 @@ $(document).ready(function() {
 		<br>
 		<div id="lightgraph" style="height: 200px;"></div>
 	</div>
+	<div id="dialog-camera-live" style="display:none;">
+		<img id="camfeed" src="images/camera_default.png" width="600" height="337" style="border: 1px solid #1E2832;">
+	</div>
 	<div id="daymonthyearlog" style="display:none;">
 		<h2 data-i18n="Day">Day</h2>
 		<div id="daygraph" style="height: 300px;"></div>
